--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,4 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = "https://ceyfind.com/"
+languageCode = "en-us"
+title = "CeyFind"
+theme = "PaperMod"
